--- a/src/components/views/Landing/Landing.css
+++ b/src/components/views/Landing/Landing.css
@@ -4,7 +4,7 @@
   --left-button-hover-color: rgba(74, 115, 254, 0.3);
   --right-bg-color: rgba(74, 115, 254, 0.3);
   --right-button-hover-color: rgba(177, 182, 199, 0.7);
-  --speed: 1000ms;
+  --speed: 300ms;
 }
 .Landing {
   padding: 0;
@@ -35,16 +35,17 @@
   height: 2.5rem;
   width: 10rem;
   text-align: center;
-  color: #f3f3f3;
-  background: var(--blue);
-  border: var(--blue) solid 0.2rem;
+  color: var(--blue);
+  background: var(--white);
+  border: var(--white) solid 3px;
   font-size: 1rem;
   font-weight: bold;
   text-transform: uppercase;
   text-decoration: none;
   transform: translateX(-50%);
-  transition: background-color 100ms linear;
+  transition: all 100ms linear;
   border-radius: 9999px;
+  outline: none;
 }
 
 .split {
@@ -55,8 +56,9 @@
 }
 
 .landing-button:hover {
-  background: transparent;
-  color: var(--blue);
+  background: var(--blue);
+  color: var(--white);
+  border: var(--blue) 3px solid;
 }
 
 .Landing_left-owner {
@@ -92,6 +94,11 @@
 }
 
 .Landing_link {
-  color: var(--white);
+  color: var(--blue);
   text-decoration: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 0.8rem;
+  letter-spacing: 2px;
 }
