--- a/src/components/views/Landing/Landing.css
+++ b/src/components/views/Landing/Landing.css
@@ -4,7 +4,7 @@
   --left-button-hover-color: rgba(74, 115, 254, 0.3);
   --right-bg-color: rgba(74, 115, 254, 0.3);
   --right-button-hover-color: rgba(177, 182, 199, 0.7);
-  --speed: 300ms;
+  --speed: 700ms;
 }
 .Landing {
   padding: 0;
@@ -30,14 +30,15 @@
 .landing-button {
   display: block;
   position: absolute;
-  left: 50%;
   top: 40%;
+  left: 50%;
+
   height: 2.5rem;
   width: 10rem;
   text-align: center;
-  color: var(--blue);
-  background: var(--white);
-  border: var(--white) solid 3px;
+  background: var(--blue);
+  color: var(--white);
+  border: var(--blue) solid 3px;
   font-size: 1rem;
   font-weight: bold;
   text-transform: uppercase;
@@ -56,9 +57,9 @@
 }
 
 .landing-button:hover {
-  background: var(--blue);
-  color: var(--white);
-  border: var(--blue) 3px solid;
+  color: var(--blue);
+  background: var(--white);
+  border: var(--white) 3px solid;
 }
 
 .Landing_left-owner {
@@ -94,7 +95,7 @@
 }
 
 .Landing_link {
-  color: var(--blue);
+  color: var(--white);
   text-decoration: none;
   display: flex;
   align-items: center;
