--- a/src/components/views/OwnerRegistration/OwnerRegistration.css
+++ b/src/components/views/OwnerRegistration/OwnerRegistration.css
@@ -8,7 +8,7 @@
   background-color: var(--white);
 }
 
-.logo-container {
+.logo-container-owner-reg {
   width: 45vw;
   height: 100%;
   background: url('../../../images/logo2-nobg.png') center center no-repeat;
