--- a/src/components/views/OwnerRegistration/OwnerRegistration.css
+++ b/src/components/views/OwnerRegistration/OwnerRegistration.css
@@ -9,13 +9,17 @@
 }
 
 .logo-container-owner-reg {
-  width: 45vw;
+  width: 35vw;
   height: 100%;
-  background: url('../../../images/logo2-nobg.png') center center no-repeat;
   background-color: var(--blue);
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+}
+.OwnerRegistration__logo {
+  width: 100%;
+  object-fit: cover;
 }
 
 .login-container {
@@ -32,11 +36,14 @@
 }
 
 .OwnerRegistration__input {
-  background: var(--gray);
-  border-radius: 5px 5px 5px 5px;
-  padding: 8px;
+  background: var(--white);
+  border: 1px solid var(--gray);
+  width: 300px;
+  border-radius: 9999px;
+  padding: 8px 15px;
   font-size: 14px;
-  margin: 5px;
+  margin: 5px 0;
+  outline: none;
 }
 
 .OwnerRegistration-button {
