--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 :root {
   --black: #1d1d1d;
   --white: #f3f3f3;
-  --blue: #4a73fe;
+  --blue: #2796d6;
   --gray: #b1b6c7;
   --box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
   --font: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
