added styling to ownerlogin, autofocus on email input on ownerlogin, changed to css grid on the properties page

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
   --black: #1d1d1d;
   --white: #f3f3f3;
   --blue: #2796d6;
+  --light-blue: #47a6dd;
   --gray: #b1b6c7;
   --box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
   --font: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
