--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,700');
 
 :root {
-  --black: #1d1d1d;
+  --black: #292929;
   --white: #f3f3f3;
   --blue: #2796d6;
   --light-blue: #47a6dd;
   --gray: #b1b6c7;
+  --dark-gray: #8e92a0;
   --box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
   --font: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
     sans-serif;
