--- a/src/components/views/OwnerLogin/OwnerLogin.css
+++ b/src/components/views/OwnerLogin/OwnerLogin.css
@@ -19,7 +19,7 @@
 }
 
 .OwnerLogin__logo {
-  width: 100%;
+  width: 70%;
   object-fit: cover;
 }
 
@@ -84,6 +84,15 @@
   outline: none;
 }
 
-.OwnerLogin__new-user {
+.OwnerLogin__footer {
   font-size: 0.75rem;
+}
+
+.OwnerLogin__link {
+  font-size: 0.75rem;
+  color: var(--blue);
+}
+
+.OwnerLogin__link:hover {
+  color: var(--dark-gray);
 }
