--- a/src/components/views/Properties/Properties.css
+++ b/src/components/views/Properties/Properties.css
@@ -17,24 +17,24 @@
 .Properties__welcome {
   padding: 20px;
 
-  font-size: 0.6rem;
+  font-size: 0.7rem;
   text-transform: uppercase;
   font-weight: 400;
   text-align: center;
 
-  color: var(--gray);
-  background: var(--white);
+  color: var(--white);
+  background: var(--black);
 }
 
 .Properties__welcome-name {
   letter-spacing: 1px;
-  font-size: 0.8rem;
-  color: var(--dark-gray);
+  font-size: 0.7rem;
+  color: var(--white);
 }
 
 .Properties-navbar-header {
   width: 100%;
-  padding: 20px 0;
+  padding: 40px 0;
   color: var(--white);
   font-size: 1rem;
   letter-spacing: 2px;
@@ -57,9 +57,9 @@
   letter-spacing: 1px;
   transition: all 100ms linear;
 }
-.Properties__button:hover {
+/* .Properties__button:hover {
   background: var(--blue);
-}
+} */
 
 .Properties__button--add {
   color: var(--white);
@@ -67,6 +67,8 @@
 
 .Properties__logo {
   width: 80%;
+  position: absolute;
+  bottom: 40px;
   object-fit: cover;
   align-self: center;
   margin: 15px 0 0;
