--- a/src/components/views/ResidentLogin/ResidentLogin.css
+++ b/src/components/views/ResidentLogin/ResidentLogin.css
@@ -49,7 +49,7 @@
   border-radius: 100px;
   text-align: center;
   letter-spacing: 1px;
-  line-height: 40px;
-  padding: 0 60px;
+  /* line-height: 40px; */
+  padding: 20px 60px;
   margin: 5px;
 }
