--- a/src/components/views/AddProperty/AddProperty.css
+++ b/src/components/views/AddProperty/AddProperty.css
@@ -26,3 +26,16 @@
   line-height: 1.2rem;
   background-color: var(--blue);
 }
+
+.AddProperty-form {
+  margin: 12px;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0, 0.4);
+  border: none;
+  color: var(--black);
+  background-color: var(--white);
+  text-decoration: none;
+  text-align: center;
+  display: block;
+  position: relative;
+  overflow: hidden;
+}
