working on Property styling

--- a/src/components/views/AddProperty/AddProperty.css
+++ b/src/components/views/AddProperty/AddProperty.css
@@ -30,7 +30,7 @@
 .AddProperty-form {
   margin: 110px 55px;
   padding: 20px;
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0, 0.4);
+  box-shadow: var(--box-shadow);
   border: none;
   color: var(--black);
   background-color: var(--white);
