--- a/src/components/views/ResidentLogin/ResidentLogin.css
+++ b/src/components/views/ResidentLogin/ResidentLogin.css
@@ -16,14 +16,13 @@
 .logo-container-registration-log {
   width: 45vw;
   height: 100%;
-  background: url('../../../images/logo2-nobg.png') center center no-repeat;
   background-color: var(--blue);
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.login-container {
+.logo-container {
   width: 65vw;
   height: 75%;
   align-self: center;
@@ -32,7 +31,11 @@
 }
 
 .residentlogin-header {
-  padding: 10px;
+  margin-bottom: 5px;
+}
+
+.residentlogin-subheader {
+  margin-bottom: 30px;
 }
 
 .ResidentLogin__input.ResidentLogin__input--email,
@@ -48,13 +51,30 @@
   background: var(--blue);
   color: var(--white);
   border: var(--blue) solid 3px;
-  font-size: 12px;
+  font-size: 0.75rem;
   font-weight: bold;
   text-transform: uppercase;
   border-radius: 100px;
   text-align: center;
-  letter-spacing: 1px;
-  /* line-height: 40px; */
-  padding: 20px 60px;
-  margin: 5px;
+  letter-spacing: 2px;
+  width: 300px;
+  height: 35px;
+  padding: 0 60px;
+  margin: 5px 0 20px;
+  outline: none;
+}
+
+.ResidentLogin__logo {
+  width: 70%;
+  object-fit: cover;
+}
+
+.Residentlogin-logo-header {
+  font-weight: normal;
+  color: var(--white);
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-size: 0.75rem;
+  position: absolute;
+  bottom: 50px;
 }
