--- a/src/components/views/ResidentLogin/ResidentLogin.css
+++ b/src/components/views/ResidentLogin/ResidentLogin.css
@@ -23,11 +23,13 @@
 }
 
 .logo-container {
-  width: 65vw;
-  height: 75%;
-  align-self: center;
-  margin: 2em;
-  padding: 135px;
+  width: 45vw;
+  height: 100%;
+  background-color: var(--blue);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .residentlogin-header {
@@ -38,13 +40,9 @@
   margin-bottom: 30px;
 }
 
-.ResidentLogin__input.ResidentLogin__input--email,
-.ResidentLogin__input.ResidentLogin__input--email {
-  background: var(--gray);
-  border-radius: 5px 5px 5px 5px;
-  padding: 8px;
-  font-size: 14px;
-  margin: 5px;
+.ResidentLogin__input.ResidentLogin__input--email:focus,
+.ResidentLogin__input.ResidentLogin__input--password:focus {
+  border: 1px solid var(--blue);
 }
 
 .ResidentLogin__submit {
@@ -77,4 +75,34 @@
   font-size: 0.75rem;
   position: absolute;
   bottom: 50px;
+}
+
+.login-container {
+  width: 65vw;
+  height: 75%;
+  align-self: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.ResidentLogin__input {
+  background: var(--white);
+  border: 1px solid var(--gray);
+  width: 300px;
+  border-radius: 9999px;
+  padding: 8px 15px;
+  font-size: 14px;
+  margin: 5px 0;
+  outline: none;
+}
+
+.ResidentLogin__link {
+  font-size: 0.75rem;
+  color: var(--blue);
+}
+
+.ResidentLogin__link:hover {
+  color: var(--dark-gray);
 }
