--- a/src/components/views/Dashboard/Dashboard.css
+++ b/src/components/views/Dashboard/Dashboard.css
@@ -2,10 +2,8 @@
   height: 100vh;
   width: 100%;
   display: grid;
-  grid-template-areas:
-    'sidebar topbar'
-    'sidebar body';
-  grid-template-rows: 100px 1fr;
+  grid-template-areas: 'sidebar body';
+  grid-template-rows: 1fr;
   grid-template-columns: 200px 1fr;
 }
 
