--- a/src/components/views/Dashboard/Property/Property.css
+++ b/src/components/views/Dashboard/Property/Property.css
@@ -1,11 +1,7 @@
 .Property-container {
-  margin: 50px 100px;
-  padding: 20px;
-  box-shadow: var(--box-shadow);
   border: none;
   color: var(--black);
   background-color: var(--white);
-  width: 65vw;
   height: 100%;
   display: flex;
   text-align: left;
@@ -13,20 +9,55 @@
   flex-direction: column;
 }
 
-.Property-name {
-  padding: 10px;
+.Property {
+  display: flex;
+  flex-direction: row-reverse;
+  height: 100%;
 }
 
-.Property-container p {
-  padding: 5px 10px;
+.Property-name {
+  color: var(--dark-gray);
+  text-transform: uppercase;
+  margin-bottom: 3px;
+}
+
+.Property__border__bottom {
+  border-bottom: 5px solid var(--light-blue);
+  width: 15%;
+}
+
+.Property__address {
+  font-size: 4rem;
+  font-weight: 900;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  margin: 30px 0;
+  line-height: 3rem;
+}
+
+.Property__info__section {
+  margin-right: 50px;
+}
+
+.Property__info__header {
+  font-size: 0.5rem;
+  font-weight: 900;
+  color: var(--light-blue);
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
+
+.Proprty__info__number {
+  font-weight: 400;
+  font-size: 1.5rem;
+  letter-spacing: 1.5px;
 }
 
 .Property__photo {
   display: block;
   border: none;
-  height: 200px;
-  width: 200px;
+  height: 100%;
+  width: 100%;
   object-fit: cover;
-  padding: 15px;
-  margin-top: 55px;
+  padding-right: 20px;
 }
