--- a/src/components/views/AddProperty/AddProperty.css
+++ b/src/components/views/AddProperty/AddProperty.css
@@ -1,17 +1,19 @@
 .AddProperty {
-  display: flex;
+  display: grid;
+  grid-template-areas: 'sidebar content';
+  grid-template-rows: 1fr;
+  grid-template-columns: 200px 1fr;
   margin: 0 auto;
-  padding-left: 250px;
 }
 
 .AddProperty-navbar {
+  grid-area: sidebar;
   background: var(--black);
-  position: fixed;
-  left: 0;
   height: 100vh;
-  width: 250px;
+  width: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
 }
 
 .AddProperty-navbar-header {
@@ -27,14 +29,24 @@
   background-color: var(--blue);
 }
 
+.AddProperty__buttons {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.AddProperty__logo {
+  width: 80%;
+  margin: 20px;
+}
+
 .AddProperty-form {
-  margin: 110px 55px;
-  padding: 20px;
+  grid-area: content;
+  padding: 50px;
   box-shadow: var(--box-shadow);
   border: none;
   color: var(--black);
   background-color: var(--white);
-  width: 65vw;
   height: 100%;
   display: flex;
   text-align: left;
@@ -49,13 +61,18 @@
   text-transform: uppercase;
   letter-spacing: 1px;
   font-weight: bold;
+  color: var(--light-black);
+}
+
+.Property__label-text {
+  padding-left: 10px;
 }
 
 .AddProperty__input {
   background: var(--white);
   border: 1px solid var(--gray);
-  border-radius: 3px;
-  padding: 8px;
+  border-radius: 9999px;
+  padding: 10px 15px;
   margin-top: 5px;
   font-size: 14px;
   outline: none;
@@ -65,17 +82,17 @@
   border: 1px solid var(--blue);
 }
 .AddProperty__button {
+  padding: 10px 15px;
   background: var(--blue);
   color: var(--white);
-  border: var(--blue) solid 3px;
+  border: var(--blue) solid 2px;
   font-size: 0.75rem;
   font-weight: bold;
   text-transform: uppercase;
-  border-radius: 3px;
+  border-radius: 9999px;
   text-align: center;
   letter-spacing: 2px;
   width: 100%;
-  height: 35px;
   outline: none;
   margin-top: 10px;
 }
