working on adding and editing units to property

--- a/src/components/views/Dashboard/Units/NewUnit/NewUnit.css
+++ b/src/components/views/Dashboard/Units/NewUnit/NewUnit.css
@@ -1,6 +1,6 @@
 .NewUnit {
-  display: grid;
-  grid: auto-flow / 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  /* display: grid; */
+  /* grid: auto-flow / 1fr 1fr 1fr 1fr 1fr 1fr 1fr; */
 }
 .NewUnit__input {
   text-align: center;
