--- a/src/components/views/Dashboard/Units/Units.css
+++ b/src/components/views/Dashboard/Units/Units.css
@@ -1,10 +1,20 @@
 .Units__title {
   text-align: left;
-  margin-bottom: 10px;
-  font-size: 2rem;
-  font-weight: 700;
+  margin-bottom: 15px;
+  font-size: 1.5rem;
+  font-weight: 400;
   letter-spacing: 2px;
   text-transform: uppercase;
-  border-left: 2px solid var(--light-blue);
+  border-left: 5px solid var(--light-blue);
   padding-left: 5px;
+}
+
+.Units__table-header {
+  color: var(--white);
+  background-color: var(--light-black);
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+}
+
+.Unit__table-row:hover {
+  background-color: #ddd;
 }
