--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@
   --light-blue: #47a6dd;
   --gray: #b1b6c7;
   --dark-gray: #8e92a0;
+  --red: #ff6b6b;
   --box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
   --font: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
     sans-serif;
