--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
   --white: #f3f3f3;
   --blue: #2796d6;
   --light-blue: #47a6dd;
-  --gray: #b1b6c7;
+  --gray: #ddd;
   --dark-gray: #8e92a0;
   --box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
   --font: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
@@ -45,12 +45,13 @@ table {
   box-shadow: 0 4px 25px rgba(0, 0, 0, 0.1);
   /* border-collapse: separate; */
   width: 100%;
+  table-layout: fixed;
 }
 
 table,
 td,
 th {
-  border: 1px solid #ddd;
+  border: 1px solid var(--gray);
   text-align: center;
 }
 
