--- a/src/components/views/Dashboard/Units/Units.css
+++ b/src/components/views/Dashboard/Units/Units.css
@@ -1,3 +1,9 @@
+.Units {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
 .Units__title {
   text-align: left;
   margin-bottom: 15px;
@@ -17,7 +23,27 @@
 
 .Unit__table-row:hover {
   transition: all 100ms linear;
-}
-.Unit__table-row:hover {
   background-color: var(--gray);
+}
+
+.Units__add-btn {
+  padding: 10px 15px;
+  background: var(--blue);
+  color: var(--white);
+  border: var(--blue) solid 2px;
+  font-size: 0.75rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  border-radius: 9999px;
+  text-align: center;
+  letter-spacing: 2px;
+  outline: none;
+  width: 235px;
+  margin-top: 15px;
+  transition: all 100ms linear;
+}
+
+.Units__add-btn:hover {
+  color: var(--blue);
+  background: var(--white);
 }
