--- a/src/components/views/Dashboard/Maintenance/Maintenance.css
+++ b/src/components/views/Dashboard/Maintenance/Maintenance.css
@@ -1,14 +1,18 @@
-.Residents__table-header {
+.Maintenance__table {
+  margin-top: 25px;
+}
+
+.Maintenance__table-header {
   color: var(--white);
   background-color: var(--light-black);
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
 }
 
-.Residents__table-data:hover {
+.Maintenance__table-data:hover {
   background-color: var(--gray);
 }
 
-.Residents__title {
+.Maintenance__title {
   text-align: left;
   margin-bottom: 15px;
   font-size: 1.5rem;
@@ -17,4 +21,12 @@
   text-transform: uppercase;
   border-left: 5px solid var(--light-blue);
   padding-left: 5px;
+}
+
+.Maintenance__close-order {
+  background: none;
+  border: none;
+  width: 100%;
+  height: 100%;
+  outline: 0;
 }
