--- a/src/index.css
+++ b/src/index.css
@@ -62,6 +62,7 @@ table {
   /* border-collapse: separate; */
   width: 100%;
   table-layout: fixed;
+  font-size: 18px;
 }
 
 table,
@@ -100,5 +101,16 @@ td {
 }
 
 table {
+  opacity: 1;
+  animation: fadeIn 0.5s ease;
   table-layout: fixed;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
