--- a/src/components/views/Dashboard/ResidentDashboard/Settings/Settings.css
+++ b/src/components/views/Dashboard/ResidentDashboard/Settings/Settings.css
@@ -25,7 +25,7 @@ button.ResSettings-button {
   padding-left: 5px;
 }
 
-form.ResSettings__form {
+.ResSettings__form {
   padding: 25px;
   border: none;
   color: var(--black);
