--- a/src/components/views/Dashboard/Dashboard.css
+++ b/src/components/views/Dashboard/Dashboard.css
@@ -60,7 +60,6 @@
 }
 
 .Dashboard__link.Dashboard__link--back {
-  height: 100px;
   display: flex;
   align-items: center;
   justify-content: flex-end;
@@ -69,7 +68,6 @@
 }
 .Dashboard__link.Dashboard__link--back:hover {
   border: none;
-  border-color: var(--blue);
   color: var(--white);
   padding: 20px;
 }
@@ -80,4 +78,22 @@
 }
 .Dashboard__link--back:hover .Dashboard__symbol--back {
   margin-right: 30px;
+}
+
+.Dashboard__resident-greeting {
+  padding: 20px 0;
+
+  font-size: 0.7rem;
+  text-transform: uppercase;
+  font-weight: 400;
+  text-align: center;
+
+  color: var(--dark-gray);
+  background: var(--black);
+}
+
+.Dashboard__resident-greeting-name {
+  letter-spacing: 1px;
+  font-size: 0.8rem;
+  color: var(--white);
 }
