--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,8 @@
   --white: #f3f3f3;
   --blue: #2796d6;
   --light-blue: #47a6dd;
-  --gray: #ddd;
-  --dark-gray: #8e92a0;
+  --gray: rgb(193, 193, 193);
+  --dark-gray: #848484;
   --red: #ff6b6b;
   --box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
   --font: Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
