--- a/src/components/views/ForgotPassword/ForgotPassword.css
+++ b/src/components/views/ForgotPassword/ForgotPassword.css
@@ -1,11 +1,93 @@
 .ForgotPassword {
-  position: fixed;
-  width: 100vw;
+  display: grid;
+  grid-template-areas: 'sidebar content';
+  grid-template-rows: 1fr;
+  grid-template-columns: 200px 1fr;
   height: 100vh;
-  top: 0;
-  left: 0;
-  display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
+  align-content: stretch;
+  background-color: var(--white);
+}
+
+.ForgotPassword__logo-container {
+  grid-area: sidebar;
+  height: 100%;
+  background-color: var(--blue);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.ForgotPassword__logo {
+  width: 70%;
+  object-fit: cover;
+}
+
+.ForgotPassword__logo-header {
+  font-weight: normal;
+  color: var(--white);
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-size: 0.75rem;
+  position: absolute;
+  bottom: 50px;
+}
+
+.ForgotPassword__login-container {
+  grid-area: content;
+}
+
+.ForgotPassword__header {
+  margin-bottom: 5px;
+}
+.ForgotPassword__subheader {
+  margin-bottom: 30px;
+}
+
+.ForgotPassword__input {
+  background: var(--white);
+  border: 1px solid var(--gray);
+  width: 300px;
+  border-radius: 9999px;
+  padding: 8px 15px;
+  font-size: 14px;
+  margin: 5px 0;
+  outline: none;
+}
+
+.ForgotPassword__input.ForgotPassword__input--email:focus,
+.ForgotPassword__input.ForgotPassword__input--password:focus {
+  border: 1px solid var(--blue);
+}
+
+.ForgotPassword__submit {
+  background: var(--blue);
+  color: var(--white);
+  border: var(--blue) solid 3px;
+  font-size: 0.75rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  border-radius: 100px;
+  text-align: center;
+  letter-spacing: 2px;
+  width: 300px;
+  height: 35px;
+  padding: 0 60px;
+  margin: 5px 0 20px;
+  outline: none;
+}
+
+.ForgotPassword__footer {
+  font-size: 0.75rem;
+}
+
+.ForgotPassword__link {
+  font-size: 0.75rem;
+  color: var(--blue);
+}
+
+.ForgotPassword__link:hover {
+  color: var(--dark-gray);
 }
